--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -1,16 +1,14 @@
-.App {
+.Home {
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
+.Home-logo {
+  animation: Home-logo-spin infinite 20s linear;
   height: 40vmin;
   pointer-events: none;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.Home-header {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,14 +17,15 @@
   color: white;
 }
 
-.App-link {
+.Home-link {
   color: #61dafb;
 }
 
-@keyframes App-logo-spin {
+@keyframes Home-logo-spin {
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
