--- a/src/components/shared/TweetViewer/TweetViewer.module.scss
+++ b/src/components/shared/TweetViewer/TweetViewer.module.scss
@@ -10,3 +10,67 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+.no_tweets {
+  color: lighten($color: #000000, $amount: 30);
+  margin-top: 2rem;
+}
+
+.icon {
+  color: lighten($color: #000000, $amount: 70);
+  font-size: 7rem !important; 
+}
+
+.loader {
+  flex: 0 100%;
+  width: 100%;
+  grid-column: 1 / 3;
+}
+
+.loader_real {
+  width: 56px;
+  height: 56px;
+  margin-top: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.archive_link {
+  text-decoration: none;
+
+  &:hover {
+    text-decoration: underline;
+  }
+}
+
+.warning_filters {
+  margin: 1rem 0 2rem 1.5rem;
+  font-style: italic;
+  font-weight: bold;
+}
+
+.modal_root {
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translate(-50%, 100%);
+  transition: .4s ease-in-out;
+  padding: 12px 24px;
+  box-sizing: border-box;
+  z-index: 2;
+  width: 80vw;
+  border-radius: 10px;
+  background: #ffffff;
+  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
+
+  &.open {
+    transform: translate(-50%, calc(0% - 64px));
+  }
+}
+
+.modal_grid_root {
+  display: grid;
+  grid-template-columns: auto max-content max-content max-content;
+  grid-gap: 15px;
+  align-items: center;
+}
+
