Task modal tiny changes, css fix for empty message

--- a/src/components/vues/Explore/Explore.module.scss
+++ b/src/components/vues/Explore/Explore.module.scss
@@ -31,7 +31,8 @@ $drawer_width:240px;
   font-size: .95rem;
 }
 .selected_month {
-  background-color: #9292ff82 !important;
+  background-color: #1f1f92d4 !important;
+  color: white !important;
 }
 
 .no_tweets {
