Login page, bug fix, first base for DMs

--- a/src/components/vues/Archive/Archive.module.scss
+++ b/src/components/vues/Archive/Archive.module.scss
@@ -46,3 +46,8 @@
   color: #ef5350 !important;
   font-weight: bold !important;
 }
+
+.modal_paper {
+  min-width: 50vw !important;
+  max-width: inherit !important;
+}
