--- a/src/index.scss
+++ b/src/index.scss
@@ -41,6 +41,10 @@ code {
   font-weight: bold !important;
 }
 
+.no-bold {
+  font-weight: normal !important;
+}
+
 .italic {
   font-style: italic;
 }
