--- a/src/components/vues/Search/Search.module.scss
+++ b/src/components/vues/Search/Search.module.scss
@@ -1,20 +1,24 @@
 .search_modal {
   position: fixed;
-  max-width: 70vw;
+  max-width: 90vw;
   transition: .3s;
-  transform: translate(-200%, -50%);
+  transform: translate(-300%, -50%);
+  opacity: 0;
+  pointer-events: none;
   left: 50%;
   top: 40%;
   z-index: 100;
 
   &.open {
     transform: translate(-50%, -50%);
+    opacity: 1;
+    pointer-events: all;
   }
 }
 
 .card {
-  min-width: 600px;
-  width: 60vw;
+  // min-width: 600px;
+  // width: 60vw;
 }
 
 .tweet_wrapper {
@@ -82,6 +86,7 @@
   grid-template-columns: auto auto auto;
   align-content: center;
   justify-content: space-around;
+  column-gap: 15px;
 }
 
 .title_p {
