--- a/src/components/vues/DMConversation/DMContainer.module.scss
+++ b/src/components/vues/DMConversation/DMContainer.module.scss
@@ -10,3 +10,15 @@
   font-size: .95rem;
   margin-bottom: .3rem;
 }
+
+.fab_jump {
+  position: fixed !important;
+  bottom: 64px;
+  right: 10px;
+  background-color: #424256 !important;
+  cursor: pointer;
+}
+
+.big_text {
+  font-size: 13px !important;
+}
