--- a/src/components/vues/Explore/Explore.module.scss
+++ b/src/components/vues/Explore/Explore.module.scss
@@ -100,3 +100,9 @@ $drawer_width:240px;
 .search_paper {
   justify-content: space-around !important;
 }
+
+.percentage {
+  font-weight: 200 !important;
+  font-size: 0.9rem !important;
+  color: #505050;
+}
