--- a/src/components/vues/TaskModal/Task.module.scss
+++ b/src/components/vues/TaskModal/Task.module.scss
@@ -1,3 +1,5 @@
+@import "../../../tools/functions.scss";
+
 .details {
   display: block !important;
 }
@@ -10,8 +12,13 @@
 
 .icon {
   font-size: inherit !important;
-  margin-right: .7rem !important;
+  margin-right: .5rem !important;
   margin-bottom: 1px;
+}
+
+.type_icon {
+  margin-right: .7rem !important;
+  color: #484848;
 }
 
 .counts {
@@ -35,4 +42,13 @@
 
 .icon_purple {
   color: #ba68c8 !important;
+}
+
+.task_id {
+  font-weight: bold;
+  margin-left: .3rem;
+
+  @include threshold_bar {
+    display: none;
+  }
 }
