More page / help

--- a/src/components/vues/More/More.module.scss
+++ b/src/components/vues/More/More.module.scss
@@ -20,3 +20,27 @@
 .delete_btn {
   margin-top: 1rem !important;
 }
+
+.dl_btn {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
+
+.t_wrapper {
+  max-height: 344px;
+  overflow: auto;
+}
+
+.sn_root {
+  width: 100%;
+  margin-top: .5rem;
+  overflow-x: auto;
+}
+
+.table {
+  min-width: 300px;
+}
+
+.table_large {
+  min-width: 450px;
+}
