--- a/src/components/vues/Archive/Archive.module.scss
+++ b/src/components/vues/Archive/Archive.module.scss
@@ -51,3 +51,8 @@
   min-width: 50vw !important;
   max-width: inherit !important;
 }
+
+.lighten_btn {
+  margin-top: 1.2rem;
+  margin-bottom: 1rem;
+}
