Better color theme, login page text

--- a/src/components/vues/DMConversation/DMConversation.module.scss
+++ b/src/components/vues/DMConversation/DMConversation.module.scss
@@ -64,13 +64,13 @@ $drawer_width:240px;
   justify-content: space-between;
   font-size: 1.05rem !important;
   font-weight: 200 !important;
-  color: #00008e;
+  color: #0078D7;
 }
 .get_back_icon {
   margin-bottom: 1px;
 }
 .selected_month {
-  background-color: #1f1f92d4 !important;
+  background-color: #006cc5 !important;
   color: white !important;
 }
 
