--- a/src/components/vues/DirectMessages/DirectMessages.module.scss
+++ b/src/components/vues/DirectMessages/DirectMessages.module.scss
@@ -28,7 +28,7 @@
 
 .tabs {
   background-color: unset !important;
-  background: linear-gradient(#3c4dac, #3c438a);
+  background: linear-gradient(#036fc8, #005da9);
 }
 
 .avatar_holder {
