--- a/src/components/vues/Explore/Explore.module.scss
+++ b/src/components/vues/Explore/Explore.module.scss
@@ -31,7 +31,7 @@ $drawer_width:240px;
   font-size: .95rem;
 }
 .selected_month {
-  background-color: #1f1f92d4 !important;
+  background-color: #006cc5 !important;
   color: white !important;
 }
 
@@ -90,7 +90,7 @@ $drawer_width:240px;
   justify-content: space-between;
   font-size: 1.05rem !important;
   font-weight: 200 !important;
-  color: #00008e;
+  color: #006cc5;
 }
 
 .get_back_icon {
