--- a/src/components/vues/Login/Login.module.scss
+++ b/src/components/vues/Login/Login.module.scss
@@ -2,6 +2,7 @@
 
 .catch_phrase {
   font-size: 1rem !important;
+  font-weight: 300 !important;
   text-align: center;
   margin-top: .7rem !important;
   margin-left: 10% !important;
