--- a/src/components/shared/RefactorArchive/RefactorArchive.module.scss
+++ b/src/components/shared/RefactorArchive/RefactorArchive.module.scss
@@ -13,10 +13,18 @@
 
 .text_lighten {
   color: lighten($color: #000000, $amount: 30);
+
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 75);
+  }
 }
 
 .steptitle {
   color: lighten($color: #000000, $amount: 15);
+
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 85);
+  }
   font-size: 1.1rem !important;
   margin: .5rem 0 !important;
 }
