--- a/src/components/vues/Explore/Explore.module.scss
+++ b/src/components/vues/Explore/Explore.module.scss
@@ -32,11 +32,19 @@ $drawer_width:240px;
 }
 .selected_month {
   background-color: #006cc5 !important;
+  :global .dark :local & {
+    background-color: #4ba7f3 !important;
+  }
+
   color: white !important;
 }
 
 .no_tweets {
   color: lighten($color: #000000, $amount: 30);
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 75);
+  }
+
   margin-top: 2rem;
 }
 .icon {
@@ -46,6 +54,10 @@ $drawer_width:240px;
 
 .year_count {
   color: lighten($color: #000000, $amount: 30);
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 75);
+  }
+
   margin-left: .2rem;
   font-size: .8rem;
 }
@@ -64,6 +76,10 @@ $drawer_width:240px;
 
 .search_input {
   border-top: 1px solid #e0e0e0 !important;
+
+  :global .dark :local & {
+    border-top: 1px solid #31313a !important;
+  }
 }
 
 .textField {
@@ -78,6 +94,14 @@ $drawer_width:240px;
   &:hover {
     background-color: #e2e2ff !important;
   }
+
+  :global .dark :local & {
+    border-bottom: 1px solid #31313a !important;
+
+    &:hover {
+      background-color: #5c5c85 !important;
+    }
+  }
 }
 
 .full_w {
@@ -91,6 +115,10 @@ $drawer_width:240px;
   font-size: 1.05rem !important;
   font-weight: 200 !important;
   color: #006cc5;
+
+  :global .dark :local & {
+    color: #52a8ee;
+  }
 }
 
 .get_back_icon {
@@ -105,4 +133,8 @@ $drawer_width:240px;
   font-weight: 200 !important;
   font-size: 0.9rem !important;
   color: #505050;
+
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 85);
+  }
 }
