--- a/src/components/StaticPresentation/StaticPresentation.scss
+++ b/src/components/StaticPresentation/StaticPresentation.scss
@@ -4,6 +4,11 @@
 .static-page {
   header {
     background-image: linear-gradient(220deg, #08ccc3 0%, #0078D7 100%);
+
+    .dark & {
+      background-image: linear-gradient(220deg, #08ccc3a6 0%, #0078d791 100%);
+    }
+
     padding: 40px 30px 80px 30px;
     min-height: 290px;
     box-sizing: border-box;
@@ -73,6 +78,14 @@
         right: 0;
       }
 
+      .dark & {
+        background-color: #2b2e3e;
+
+        &:active {
+          color: rgb(220, 220, 255);
+        }
+      }
+
       &:active {
         color: blue;
       }
@@ -81,6 +94,10 @@
 
   main {
     color: #373a3c;
+
+    .dark & {
+      color: #fff;
+    }
 
     p {
       line-height: 30px;
@@ -181,6 +198,11 @@
         & > div {
           height: 100%;
           background-color: #ececec;
+
+          .dark & {
+            background-color: #3b3a48;
+          }
+
           padding: 18px;
           box-sizing: border-box;
         }
@@ -206,6 +228,10 @@
   footer {
     background: linear-gradient(#f7f7f7, #f7f7f7, #c4d9ff);
 
+    .dark & {
+      background: linear-gradient(#2b2c2b, #2b2c2b, #585858);
+    }
+
     .divider-big-margin {
       margin-top: 3rem !important;
       margin-bottom: 0 !important;
@@ -219,6 +245,10 @@
 
     .twitter-link {
       color: rgb(53, 53, 53) !important;
+
+      .dark & {
+        color: rgb(223, 223, 223) !important;
+      }
     }
   }
   
