--- a/src/components/shared/TweetViewer/TweetViewer.module.scss
+++ b/src/components/shared/TweetViewer/TweetViewer.module.scss
@@ -13,6 +13,10 @@
 
 .no_tweets {
   color: lighten($color: #000000, $amount: 30);
+
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 75);
+  }
   margin-top: 2rem;
 }
 
@@ -60,6 +64,10 @@
   width: 80vw;
   border-radius: 10px;
   background: #ffffff;
+  :global .dark :local & {
+    background: #313131;
+  }
+
   box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
 
   &.open {
