--- a/src/components/shared/Tweets/Tweet.module.scss
+++ b/src/components/shared/Tweets/Tweet.module.scss
@@ -28,6 +28,15 @@
   color: inherit;
   text-decoration: none;
 
+  :global .dark :local & {
+    color: white !important;
+
+    &:hover {
+      color: rgb(172, 172, 255);
+      text-decoration: underline;
+    }
+  }
+
   &:hover {
     color: rgb(73, 73, 255);
     text-decoration: underline;
