--- a/src/components/vues/Archive/Archive.module.scss
+++ b/src/components/vues/Archive/Archive.module.scss
@@ -26,6 +26,12 @@
 
 .dmsinfowrapper {
   color: lighten(#000000, 35);
+
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 75);
+  }
+
+  
   font-size: .9rem !important;
 }
 
@@ -36,6 +42,10 @@
 .bio {
   font-size: .95rem;
   color: lighten(#000000, 35);
+
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 75);
+  }
 }
 
 .filename {
