--- a/src/components/vues/TaskModal/Task.module.scss
+++ b/src/components/vues/TaskModal/Task.module.scss
@@ -19,6 +19,10 @@
 .type_icon {
   margin-right: .7rem !important;
   color: #484848;
+
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 85);
+  }
 }
 
 .counts {
@@ -28,6 +32,11 @@
 
 .header_info {
   color: #505050;
+
+  :global .dark :local & {
+    color: lighten($color: #000000, $amount: 75);
+  }
+
   font-size: .9rem !important;
   margin-left: .5rem !important;
 }
