--- a/src/index.scss
+++ b/src/index.scss
@@ -6,6 +6,11 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #f7f7f7;
+
+  &.dark {
+    background-color: #2b2b2b;
+    color: #fff;
+  }
 }
 
 a {
@@ -18,6 +23,30 @@ a:hover {
 
 a:active {
   color: inherit;
+}
+
+.dark {
+  a {
+    color: #cecdff;
+  }
+
+  a:active {
+    color: #eeeeff !important;
+  }
+
+  a:visited {
+    color: #bdbcfd;
+  }
+}
+
+.dark .nav.primary {
+  a {
+    color: #fff;
+  }
+
+  a.Mui-selected {
+    color: #86caff;
+  }
 }
 
 code {
