Final dark mode

--- a/src/components/StaticPresentation/StaticPresentation.scss
+++ b/src/components/StaticPresentation/StaticPresentation.scss
@@ -275,6 +275,10 @@
   .github-img {
     display: block;
     height: 24px;
+    
+    .dark & {
+      filter: invert(1);
+    }
   }
   
   .github-text {
