Better refactor mac

--- a/src/components/shared/RefactorArchive/RefactorArchive.module.scss
+++ b/src/components/shared/RefactorArchive/RefactorArchive.module.scss
@@ -29,6 +29,14 @@
   margin: .5rem 0 !important;
 }
 
+.beforestep {
+  font-size: 1.2rem !important;
+  font-weight: lighter !important;
+
+  margin: .5rem 0 !important;
+  margin-top: -.5rem !important;
+}
+
 .step {
   width: auto;
   max-width: 100%;
