--- a/src/components/vues/DMConversation/DMContainer.module.scss
+++ b/src/components/vues/DMConversation/DMContainer.module.scss
@@ -1,5 +1,9 @@
 .root {
-  width: 100%;
+  // width: 100%;
+  // TODO CHECK IF OK
+  max-width: 1200px;
+  margin: auto;
+  // ENDOF TODO
 }
 
 .divider_text {
