--- a/src/components/shared/TweetViewer/TweetViewer.module.scss
+++ b/src/components/shared/TweetViewer/TweetViewer.module.scss
@@ -16,6 +16,27 @@
   }
 }
 
+.toggleContainer {
+  margin: 1rem 0;
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  justify-content: center;
+  gap: 10px 25px;
+
+  @include mobile {
+    grid-template-columns: auto auto;
+  }
+
+  @include threshold_bar {
+    grid-template-columns: auto;
+  }
+}
+
+.inlineToggleButton {
+  background-color: unset !important;
+  justify-content: center;
+}
+
 .no_tweets {
   color: lighten($color: #000000, $amount: 30);
 
