--- a/src/components/StaticPresentation/StaticPresentation.scss
+++ b/src/components/StaticPresentation/StaticPresentation.scss
@@ -150,6 +150,7 @@
         width: 45%;
         border-radius: 8px;
         box-shadow: 0 5px 10px rgba(0, 0, 0, 0.1);
+        object-fit: cover;
       }
 
       &:nth-child(even) {
