Donation msg, transparent big archives

--- a/src/index.scss
+++ b/src/index.scss
@@ -63,6 +63,10 @@ code {
   white-space: pre-line;
 }
 
+.break-all {
+  word-break: break-all;
+}
+
 .divider-big-margin {
   margin: 1.2rem auto !important;
 }
