--- a/src/components/vues/Archive/Archive.module.scss
+++ b/src/components/vues/Archive/Archive.module.scss
@@ -1,3 +1,5 @@
+@import "../../../tools/functions.scss";
+
 .root {
   flex-grow: 1;
 }
@@ -17,11 +19,19 @@
   font-weight: lighter !important;
 }
 
-.center {
-  position: absolute;
-  top: 40%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+.container {
+  min-height: calc(100vh - #{$bottom_bar_height} - 64px);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  margin-bottom: $bottom_bar_height;
+
+  @include threshold_bar {
+    min-height: calc(100vh - #{$bottom_bar_height} - 56px);
+  }
 }
 
 .dmsinfowrapper {
@@ -30,7 +40,6 @@
   :global .dark :local & {
     color: lighten($color: #000000, $amount: 75);
   }
-
   
   font-size: .9rem !important;
 }
@@ -89,4 +98,24 @@
   font-weight: 300;
   font-size: 1.5rem;
   margin: .3rem 0 !important;
+}
+
+.list_archive_header {
+  display: flex;
+  justify-content: space-between;
+}
+
+.list_archive_header_buttons {
+  &:last-child {
+    margin-right: 5px;
+  }
+}
+
+.blocked {
+  pointer-events: none;
+  opacity: .5;
+}
+
+.smooth_opacity {
+  transition: opacity .5s;
 }
