--- a/src/components/vues/DMConversation/DM.module.scss
+++ b/src/components/vues/DMConversation/DM.module.scss
@@ -20,7 +20,7 @@ $avatar: 38px;
   padding: 10px;
   border-radius: 12px;
   grid-area: text;
-  white-space: pre-line;
+  white-space: pre-wrap;
   word-break: break-word;
 }
 
