--- a/src/components/Router/RouterWrapper.module.scss
+++ b/src/components/Router/RouterWrapper.module.scss
@@ -1,19 +1,20 @@
 @import '../../tools/functions.scss';
 
 .stick_to_bottom {
-    width: 100%;
-    position: fixed;
-    bottom: 0;
+  width: 100%;
+  position: fixed;
+  bottom: 0;
+  z-index: 4;
 }
 
 .bottom_bar {
-    @include threshold_bar {
-        width: 100%;
-        overflow-y: hidden;
-        overflow-x: auto;
-        box-sizing: border-box;
-        display: grid !important;
-        grid-template-columns: max-content max-content max-content max-content max-content max-content;
-        justify-content: unset !important;
-    }
+  @include threshold_bar {
+    width: 100%;
+    overflow-y: hidden;
+    overflow-x: auto;
+    box-sizing: border-box;
+    display: grid !important;
+    grid-template-columns: max-content max-content max-content max-content max-content max-content;
+    justify-content: unset !important;
+  }
 }
