--- a/src/components/vues/Archive/Archive.module.scss
+++ b/src/components/vues/Archive/Archive.module.scss
@@ -2,6 +2,7 @@
 
 .root {
   flex-grow: 1;
+  background: linear-gradient(#fff, #000);
 }
 
 .card {
@@ -21,13 +22,8 @@
 
 .container {
   min-height: calc(100vh - #{$bottom_bar_height} - 64px);
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding-top: 10px;
-  padding-bottom: 10px;
   margin-bottom: $bottom_bar_height;
+  width: 100%;
 
   @include threshold_bar {
     min-height: calc(100vh - #{$bottom_bar_height} - 56px);
@@ -86,6 +82,31 @@
   color: #b8b8b8 !important;
   flex-direction: column;
   pointer-events: none;
+}
+
+.dragdrop_no_drop {
+  border: 1px dashed #d6d6d6;
+  padding: 14px;
+  box-sizing: border-box;
+  border-radius: 8px;
+  display: flex;
+  flex-direction: column;
+  cursor: pointer;
+  transition: .3s;
+  background: #d8d8d836;
+
+  :global .dark :local & {
+    border-color: #828282;
+    background: #64646436;
+  }
+
+  &:hover {
+    background: #99999936;
+    
+    :global .dark :local & {
+      background: #95959536;
+    }
+  }
 }
 
 .fu_icon {
