--- a/src/index.scss
+++ b/src/index.scss
@@ -14,6 +14,20 @@ body {
   }
 }
 
+.tweet-font {
+  font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    sans-serif;
+
+  &.tweet-text {
+    font-weight: 500 !important;
+  }
+
+  &.tweet-details {
+    font-weight: normal !important;
+  }
+}
+
 a {
   text-decoration: none;
 }
